# vm_tools

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  Example_w1.txt  README.md  build.bat  build.sh  vm_tools_ver.h  vm_tools_ver.h.in
doc/: vm_tools.eap
inc/: changelist.txt
lib/: changelist.txt
prj/: changelist.txt
prj/cmake/: CMakeCache.txt  Makefile  changelist.txt  cmake_install.cmake
src/: vm_cfgs.h  vm_tools.h  vm_verify.h
src/vm_cfgs/: vm_cfg_def_err.h  vm_cfg_def_exp.h  vm_cfg_def_file.h  vm_cfg_def_func_cvt.h  vm_cfg_def_func_cvt_lux.h  vm_cfg_def_func_cvt_win.h  vm_cfg_def_func_file.h  vm_cfg_def_func_file_lux.h  vm_cfg_def_func_file_win.h  vm_cfg_def_func_fmt.h  vm_cfg_def_func_fmt_lux.h  vm_cfg_def_func_fmt_win.h  vm_cfg_def_func_io.h  vm_cfg_def_func_mem.h  vm_cfg_def_func_mem_lux.h  vm_cfg_def_func_mem_win.h  vm_cfg_def_func_oth.h  vm_cfg_def_func_str.h  vm_cfg_def_func_str_lux.h  vm_cfg_def_func_str_win.h  vm_cfg_def_lmt.h  vm_cfg_def_mcr.h  vm_cfg_def_mth.h  vm_cfg_def_ret.h  vm_cfg_def_std.h  vm_cfg_def_str.h  vm_cfg_def_str_fmt.h  vm_cfg_def_str_fmt_hex.h  vm_cfg_def_str_fmt_oct.h  vm_cfg_def_sys.h  vm_cfg_def_time.h  vm_cfg_def_typ.h  vm_lib_def_mcr.h
src/vm_tools/: vm_bits.h  vm_cbit.h  vm_cerr.h  vm_ckernal.h  vm_cmds.h  vm_cmem.h  vm_cstr.h  vm_datas.h  vm_error.h  vm_exps.h  vm_files.h  vm_funcs.h  vm_ipcs.h  vm_kernal.h  vm_memory.h  vm_string.h  vm_system.h  vm_term.h  vm_time.h  vm_util.h  vm_utst.h
tst/tst_any/: CMakeLists.txt  main.cpp
tst/tst_bits/: main.cpp  tst_bits.cpp  tst_cbit08.h  tst_cbit16.h  tst_cbit32.h  tst_cbit64.h  tst_cbitstr.h
tst/tst_cbit/: CMakeLists.txt  tst_cbit08.h  tst_cbit16.h  tst_cbit32.h  tst_cbit64.h
tst/tst_cerr/: CMakeLists.txt  tst_cerr.cpp
tst/tst_cfgs/: tst_cfgs.cpp
tst/tst_cfgs_w/: CMakeLists.txt  tst_cfgs.cpp
tst/tst_cmds/: CMakeLists.txt  tst_cmds.cpp
tst/tst_cstr/: CMakeLists.txt  tst_cstr.cpp  tst_cstr.h
tst/tst_cycbuf/: tst_cycbuf.cpp  tst_cycbuf.h
tst/tst_error/: TstRet.h  main.cpp  tst_err.h  tst_error.cpp  tst_syserr.h  tst_usrerr.h
tst/tst_file/: .tst_cfile.h.swp  .tst_file.h.swp  CMakeLists.txt  main.cpp  tst_file.cpp  tst_file.h  tst_file_locale.h  tst_filemode.h  tst_filesys.h
tst/tst_kernal/: main.cpp
tst/tst_list/: CMakeLists.txt  main.cpp
tst/tst_prfmt/: CMakeLists.txt  main.cpp  tst_prfmt.cpp  tst_prfmt.h
tst/tst_singleton/: tst_singleton.cpp  tst_singleton.h  tst_singleton2.cpp  (+1 more)
tst/vm_exps/: CMakeLists.txt  main.cpp  tst_exps.h
(+246 files in other folders)
